feat: add WlmSchema and Transformations with tests
- Add WlmSchema with csvSchema (15 cols) and transformedSchema (4 cols)
- Add Transformations.transform: splits monument_id, extracts region, parses upload_date
- Add TransformationsSpec with 5 passing tests
- Fix build.sbt: add JVM --add-exports/--add-opens for Java 17 + Spark 3.5
- Fix build.sbt: pin Jackson Databind to 2.15.4 to match scala-module 2.15.2

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>